[package]
name = "userspace-rng"
version = "0.1.3"
edition = "2021"
description = "provides secure randomness with entropy generated in userspace"
license = "MIT"
repository = "https://github.com/DavidVorick/userspace-rng"

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js", "std"] }
sha2 = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rng_speed"
harness = false
